--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -5,7 +5,6 @@ on:
   workflow_dispatch:
 env:
   LOWER_OWNER: mohammedbilal-0001
-  GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,31 +12,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ env.GHCR_TOKEN }}
-      
       - name: Install Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
         with:
           api_token: ${{ secrets.KOYEB_TOKEN }}
       
-      - name: Verify Images Accessibility
+      - name: Create Registry Secret in Koyeb
         run: |
-          echo "Verifying frontend image..."
-          docker pull ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
-          echo "Verifying backend1 image..."
-          docker pull ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
-          echo "Verifying backend2 image..."
-          docker pull ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest
-          echo "All images exist and are accessible"
+          koyeb secret create github-registry \
+            --type registry \
+            --registry-server ghcr.io \
+            --registry-username ${{ github.actor }} \
+            --registry-password ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Deploy Frontend to Koyeb with Debug Mode
+      - name: Deploy Frontend to Koyeb
         run: |
-          koyeb --debug service create frontend-service \
+          koyeb service create frontend-service \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
             --ports 3000:http \
             --routes "/frontend:3000" \
@@ -46,26 +36,29 @@ jobs:
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
-            --max-scale 1
+            --max-scale 1 \
+            --docker-private-registry-secret github-registry
       
-      - name: Deploy Backend1 to Koyeb with Debug Mode
+      - name: Deploy Backend1 to Koyeb
         run: |
-          koyeb --debug service create backend1-service \
+          koyeb service create backend1-service \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
             --ports 5001:http \
             --routes "/backend1:5001" \
             --regions fra \
             --env "FLASK_ENV=production" \
             --min-scale 0 \
-            --max-scale 1
+            --max-scale 1 \
+            --docker-private-registry-secret github-registry
       
-      - name: Deploy Backend2 to Koyeb with Debug Mode
+      - name: Deploy Backend2 to Koyeb
         run: |
-          koyeb --debug service create backend2-service \
+          koyeb service create backend2-service \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest \
             --ports 5002:http \
             --routes "/backend2:5002" \
             --regions fra \
             --env "FLASK_ENV=production" \
             --min-scale 0 \
-            --max-scale 1
+            --max-scale 1 \
+            --docker-private-registry-secret github-registry
