--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Build and Push Images
+name: Build and Push Images to Docker Hub
 
 on:
   push:
@@ -6,25 +6,21 @@ on:
   workflow_dispatch:
 
 env:
-  LOWER_OWNER: "mohammedbilal-0001"
+  DOCKERHUB_USERNAME: "acebm"
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login to GHCR
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Backend 1
         uses: docker/build-push-action@v5
@@ -33,8 +29,8 @@ jobs:
           file: ./Backend_1/Dockerfile.backend1
           push: true
           tags: |
-            ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
-            ghcr.io/${{ env.LOWER_OWNER }}/backend1:${{ github.sha }}
+            ${{ env.DOCKERHUB_USERNAME }}/backend1:latest
+            ${{ env.DOCKERHUB_USERNAME }}/backend1:${{ github.sha }}
 
       - name: Build and push Backend 2
         uses: docker/build-push-action@v5
@@ -45,8 +41,8 @@ jobs:
           secrets: |
             DAGSHUB_TOKEN=${{ secrets.DAGSHUB_TOKEN }}
           tags: |
-            ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest
-            ghcr.io/${{ env.LOWER_OWNER }}/backend2:${{ github.sha }}
+            ${{ env.DOCKERHUB_USERNAME }}/backend2:latest
+            ${{ env.DOCKERHUB_USERNAME }}/backend2:${{ github.sha }}
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
@@ -55,8 +51,8 @@ jobs:
           file: ./frontend/Dockerfile.frontend
           push: true
           tags: |
-            ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
-            ghcr.io/${{ env.LOWER_OWNER }}/frontend:${{ github.sha }}
+            ${{ env.DOCKERHUB_USERNAME }}/frontend:latest
+            ${{ env.DOCKERHUB_USERNAME }}/frontend:${{ github.sha }}
 
       - name: Create deployment trigger
         run: echo "${{ github.sha }}" > .deployment_trigger
