--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -25,11 +25,11 @@ jobs:
         run: |
           # Deploy ONLY the frontend container
           koyeb --token $KOYEB_TOKEN service create aide-project-frontend \
-            --docker acebm/frontend:latest \
+            acebm/frontend:latest \  # Docker image as positional argument (no --docker flag)
             --ports "3000:http" \
             --routes "/:3000" \
             --regions fra \
-            --env "REACT_APP_BACKEND1_URL=/backend1" \  # Optional: Only if your frontend needs these
+            --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
             --max-scale 1
