--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -18,22 +18,21 @@ jobs:
       - name: Install Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
         with:
-          api_token: ${{ secrets.KOYEB_TOKEN }}
+          api_token: ${{ secrets.KOYEB_API_TOKEN  }}
       - name: Deploy Frontend to Koyeb
         env:
-          KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}  # GitHub Secret
+          KOYEB_TOKEN: ${{ secrets.KOYEB_API_TOKEN  }}  # GitHub Secret
         run: |
           # Deploy ONLY the frontend container
           koyeb  service create aide-project-frontend \
-            acebm/frontend:latest \  # Docker image as positional argument (no --docker flag)
+            --docker acebm/frontend:latest \  # Docker image as positional argument (no --docker flag)
             --ports "3000:http" \
             --routes "/:3000" \
             --regions fra \
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
-            --max-scale 1 \
-            --token $KOYEB_TOKEN
+            --max-scale 1 
       - name: Deploy to Koyeb
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}  # GitHub Secret
