--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -18,21 +18,21 @@ jobs:
       - name: Install Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
         with:
-          api_token: ${{ secrets.KOYEB_API_TOKEN  }}
-      - name: Deploy Frontend to Koyeb
+          api_token: ${{ secrets.KOYEB_API_TOKEN }}
+
+      - name: Deploy Frontend
         env:
-          KOYEB_TOKEN: ${{ secrets.KOYEB_API_TOKEN  }}  # GitHub Secret
+          DOCKERHUB_USERNAME: acebm  # Or use a secret if private
         run: |
-          # Deploy ONLY the frontend container
-          koyeb  service create aide-project-frontend \
-            --docker acebm/frontend:latest \  # Docker image as positional argument (no --docker flag)
+          koyeb service create aide-project-frontend \
+            acebm/frontend:latest \
             --ports "3000:http" \
             --routes "/:3000" \
             --regions fra \
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
-            --max-scale 1 
+            --max-scale 1
       - name: Deploy to Koyeb
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}  # GitHub Secret
