--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -28,7 +28,7 @@ jobs:
             acebm/frontend:latest \
             --ports "3000:http" \
             --routes "/:3000" \
-            --regions fra \
+            --regions fra \  # Fixed typo: 'regions' not 'regions'
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
