--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -18,7 +18,6 @@ jobs:
       - name: Deploy Frontend (Docker CLI)
         run: |
           docker run --rm \
-            -e KOYEB_API_TOKEN=${{ secrets.KOYEB_API_TOKEN }} \
             koyeb/koyeb-cli service create aide-project-frontend \
               --docker acebm/frontend:latest \
               --ports "3000:http" \
@@ -27,28 +26,5 @@ jobs:
               --env "REACT_APP_BACKEND1_URL=/backend1" \
               --env "REACT_APP_BACKEND2_URL=/backend2" \
               --min-scale 0 \
-              --max-scale 1
-
-      - name: Deploy Backend Services (Docker CLI)
-        run: |
-          docker run --rm \
-            -e KOYEB_API_TOKEN=${{ secrets.KOYEB_API_TOKEN }} \
-            koyeb/koyeb-cli service create aide-project-backend1 \
-              --docker acebm/backend1:latest \
-              --ports "5001:http" \
-              --routes "/backend1:5001" \
-              --regions fra \
-              --env "NODE_ENV=production" \
-              --min-scale 0 \
-              --max-scale 1
-
-          docker run --rm \
-            -e KOYEB_API_TOKEN=${{ secrets.KOYEB_API_TOKEN }} \
-            koyeb/koyeb-cli service create aide-project-backend2 \
-              --docker acebm/backend2:latest \
-              --ports "5002:http" \
-              --routes "/backend2:5002" \
-              --regions fra \
-              --env "FLASK_ENV=production" \
-              --min-scale 0 \
-              --max-scale 1
+              --max-scale 1 \
+              --token "${{ secrets.KOYEB_API_TOKEN }}"
