--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -17,7 +17,10 @@ jobs:
 
       - name: Deploy Frontend (Docker CLI)
         run: |
+          
           docker run --rm \
+            koyeb/koyeb-cli app create churn-detection \
+              --token "${{ secrets.KOYEB_API_TOKEN }}"
             koyeb/koyeb-cli service create churn-detection/aide-project-frontend \
               --docker acebm/frontend:latest \
               --ports "3000:http" \
