--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -19,13 +19,17 @@ jobs:
         run: |
           
           docker run --rm \
-            koyeb/koyeb-cli service create churn-detection/aide-project-frontend \
-              --docker acebm/frontend:latest \
-              --ports "3000:http" \
-              --routes "/:3000" \
-              --regions fra \
-              --env "REACT_APP_BACKEND1_URL=/backend1" \
-              --env "REACT_APP_BACKEND2_URL=/backend2" \
-              --min-scale 0 \
-              --max-scale 1 \
-              --token "${{ secrets.KOYEB_API_TOKEN }}"
+            koyeb/koyeb-cli service create churn-detection/aide-project-b-f \
+             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
+             --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
+             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest \
+             --ports "3000:http,5001:http,5002:http" \
+             --routes "/frontend:3000,/backend1:5001,/backend2:5002" \
+             --regions fra \
+             --env "NODE_ENV=production" \
+             --env "FLASK_ENV=production" \
+             --env "REACT_APP_BACKEND1_URL=/backend1" \
+             --env "REACT_APP_BACKEND2_URL=/backend2" \
+             --min-scale 0 \
+             --max-scale 1 \
+             --token "${{ secrets.KOYEB_API_TOKEN }}"
