--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -30,6 +30,7 @@ jobs:
              --env "FLASK_ENV=production" \
              --env "REACT_APP_BACKEND1_URL=/backend1" \
              --env "REACT_APP_BACKEND2_URL=/backend2" \
+             --env "DAGSHUB_TOKEN=${{ secrets.DAGSHUB_TOKEN }}" \
              --min-scale 0 \
              --max-scale 1 \
              --token "${{ secrets.KOYEB_API_TOKEN }}"
